--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="sort.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
   <body>
-    <script></script>
+    <h1>Runtimes of Some Commonly Used Sorting Algorithms</h1>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="data.js"></script>
   </body>
 </html>
