using d3 from browser so it can work with github pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/chart.css" rel="stylesheet" />
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="/data.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
