using unpkg for c3 and d3

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/chart.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <link href="https://unpkg.com/browse/c3@0.7.2/c3.css" rel="stylesheet" />
+    <link href="/chart.css" rel="stylesheet" />
+    <script src="https://unpkg.com/browse/c3@0.7.2/c3.min.js"></script>
     <script src="/data.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
