--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/c3@0.4.14/c3.css" />
     <link href="/chart.css" rel="stylesheet" />
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <link href="https://unpkg.com/browse/c3@0.7.2/c3.css" rel="stylesheet" />
-    <link href="/chart.css" rel="stylesheet" />
-    <script src="https://unpkg.com/browse/c3@0.7.2/c3.min.js"></script>
+    <script src="https://unpkg.com/d3@3.5.6/d3.js"></script>
+    <script src="https://unpkg.com/c3@0.4.14/c3.js"></script>
     <script src="/data.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
