--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/c3@0.4.14/c3.css" />
+    <link rel="stylesheet" href="https://unpkg.com/c3@0.7.18/c3.css" />
     <link href="/chart.css" rel="stylesheet" />
-    <script src="https://unpkg.com/d3@3.5.6/d3.js"></script>
-    <script src="https://unpkg.com/c3@0.4.14/c3.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://unpkg.com/c3@0.7.18/c3.js"></script>
     <script src="/data.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
   <body>
     <h1>Runtimes of Some Commonly Used Sorting Algorithms</h1>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="data.js"></script>
+    <div id="chart"></div>
+    <script src="/index.js"></script>
   </body>
 </html>
