--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Sorting Algo Experiment</title>
   </head>
   <body>
-    <h1>Runtimes of Some Commonly Used Sorting Algorithms</h1>
+    <h1>Sorting Algothrim Runtimes</h1>
     <div id="chart"></div>
     <script src="/index.js"></script>
   </body>
