fixed script src with ./

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/c3@0.7.18/c3.css" />
-    <link href="/chart.css" rel="stylesheet" />
+    <link href="./chart.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/c3@0.7.18/c3.js"></script>
-    <script src="/data.js"></script>
+    <script src="./data.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
   <body>
     <h1>Sorting Algothrim Runtimes</h1>
     <div id="chart"></div>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
