added purpose and hypothesis

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   </head>
   <body>
     <h1>Sorting Algothrim Runtimes</h1>
+    <p>
+      <h3>Purpose:</h3> The goal of this experiment is to measure and compare the
+      efficiency of sorting algorithms for sorting n elements. The algorithms
+      that are examined are <a href="https://en.wikipedia.org/wiki/Insertion_sort">Insertion Sort</a>, <a href="https://en.wikipedia.org/wiki/Quicksort">Quicksort</a>, Quicksort with Insertion
+      Sort, and <a href="https://en.wikipedia.org/wiki/Merge_sort">Merge Sort</a>.
+    </p>
+    <P>
+      <h3>Hypothesis:</h3> Quicksort is more efficient than insertion sort for sorting large arrays. The asymptotic time complexity, or big-O, of insertion sort is n<sup>2</sup> while the big-O of quicksort is nlog(n). However, when implementing each sorting algorithm, quicksort has a greater overhead than insertion sort and is less efficient than insertion sort for sorting smaller arrays. 
+    </P>
     <div id="chart"></div>
     <script src="./index.js"></script>
   </body>
