collected data for comparing insertion sort and quicksort to find best k for quicksort with insertion sort

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>
       <h4>Runtimes of Different Algothrims Sorting n Elements</h4>
     </p>
-    <div id="chart"></div>
+    <div id="allAlgo"></div>
     <p class="caption">
       <b>Graph 1.</b> The average runtimes of the sorting algorithms for increasing array size in a log/ log plot. The slope for insertion sort is 2, which is consistant with a big-O of n<sup>2</sup>. The slope for merge sort is 1, which is consistant with a big-O of nlog(n). The slope for quicksort is also 1 with the constant less than the constant for merge sort.
     </p>
