renamed data file to allAlgoData and moved it to data folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./chart.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/c3@0.7.18/c3.js"></script>
-    <script src="./data.js"></script>
+    <script src="./data/allAlgodata.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
   <body>
