--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/c3@0.7.18/c3.js"></script>
     <script src="./data/allAlgodata.js"></script>
+    <script src="util.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
   <body>
