added table for k calculations in discussion

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./data/insertionVsQuicksortData.js"></script>
     <script src="./data/quicksortInsertionData.js"></script>
     <script src="./data/quicksortData.js"></script>
+    <script src="./data/kValueCalculations.js"></script>
     <script src="util.js"></script>
     <title>Sorting Algo Experiment</title>
   </head>
@@ -98,6 +99,7 @@
      </p>
       <h3>Discussion:</h3>
       <p>The trend in the runtime measurements for each sorting algorithm at increasing array size, n, were consistant with the expected big-O of the algorithms. Insertion sort is not an efficient algorithm for sorting large size arrays as the runtime will increase by a factor of 4 each time the array size doubles.  </p>
+      <table id="kTable"></table>
     </div>
     <script src="./index.js"></script>
   </body>
