added author line

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>Sorting Algothrim Runtimes</h1>
-    <h5>By Angela Vuong</h5>
+    <h5><a href="http://bit.ly/angelavuong">By Angela Vuong</a></h5>
     <p>
       <h3>Purpose:</h3> The goal of this experiment is to measure and compare the
       efficiency of sorting algorithms for sorting n elements. The algorithms
