--- a/references.html
+++ b/references.html
@@ -21,6 +21,9 @@
 <body>
 <h1 class="unnumbered" id="bibliography">Bibliography</h1>
 <div id="refs" class="references hanging-indent" role="doc-bibliography">
+<div id="ref-10.5555/318199">
+<p>Bentley, Jon. 1999. <em>Programming Pearls (2nd Ed.)</em>. USA: ACM Press/Addison-Wesley Publishing Co.</p>
+</div>
 <div id="ref-cormen01introduction">
 <p>Cormen, Thomas H., Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein. 2001. <em>Introduction to Algorithms</em>. 2nd ed. The MIT Press. <a href="http://www.amazon.com/Introduction-Algorithms-Thomas-H-Cormen/dp/0262032937%3FSubscriptionId%3D13CT5CVB80YFWJEPWS02%26tag%3Dws%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0262032937">http://www.amazon.com/Introduction-Algorithms-Thomas-H-Cormen/dp/0262032937%3FSubscriptionId%3D13CT5CVB80YFWJEPWS02%26tag%3Dws%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0262032937</a>.</p>
 </div>
