added padding to each section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <h1>Sorting Algothrim Runtimes</h1>
     <h5><a href="http://bit.ly/angelavuong">By Angela Vuong</a></h5>
-    <div id="section-purpose">
+    <div id="section-purpose" class="section">
       <h3>Purpose:</h3>
       <p>
         The goal of this experiment is to measure the runtime of sorting
@@ -34,7 +34,7 @@
         Insertion Sort hybrid algorithm.
       </p>
     </div>
-    <div id="section-introduction">
+    <div id="section-introduction" class="section">
       <h3>Introduction:</h3>
       <p>
         The running time of an algorithm on a particular input is the number of
@@ -65,7 +65,7 @@
         all input sizes.
       </p>
     </div>
-    <div id="section-hypothesis">
+    <div id="section-hypothesis" class="section">
       <h3>Hypothesis:</h3>
       <p>
         Quicksort is more efficient than insertion sort for sorting large
@@ -77,7 +77,7 @@
       </p>
     </div>
 
-    <div id="section-procedure">
+    <div id="section-procedure" class="section">
       <h3>Experimental Procedure:</h3>
       <p><b>Part I. Measure Runtime for All 4 Sorting Algothrims.</b></p>
       <p>
@@ -117,7 +117,7 @@
 
       <script src="https://gist.github.com/avuong12/395140039292ce470fad6f4f49650255.js"></script>
     </div>
-    <div id="section-results">
+    <div id="section-results" class="section">
       <h3>Results:</h3>
       <p>
         The runtimes for each algorithm is plotted in a log/ log plot as shown
@@ -199,7 +199,7 @@
       </p>
     </div>
 
-    <div class="section-discussion">
+    <div id="section-discussion" class="section">
       <h3>Discussion:</h3>
 
       <p>
@@ -330,7 +330,7 @@
         approximately k = 103 on the computer that conducted the experiment.
       </p>
     </div>
-    <div class="section-references">
+    <div id="section-references" class="section">
       <h3>References:</h3>
       <div id="refs" class="references hanging-indent" role="doc-bibliography">
         <ol id="references">
